--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hellobike</groupId>
-    <artifactId>monitor10</artifactId>
+    <artifactId>RiskRule</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <spark.version>2.2.1</spark.version>
